--- a/example/gitea-disable/files/403.html
+++ b/example/gitea-disable/files/403.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="/vendor/plugins/fomantic/semantic.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/index.css" />
   </head>
   <body>
-    <div style="border-radius: .28571429rem; border-width: 1px; border-style: solid; border-color: rgba(34, 36, 38, 0.15); padding: 1em;">
+    <div style="margin: 1em; border-radius: .28571429rem; border-width: 1px; border-style: solid; border-color: rgba(34, 36, 38, 0.15); padding: 1em;">
       <h1>403 Forbidden</h1>
       <p>Issues, Releases and Wiki are disabled for forked repositories. Please use the source repository for those.</p>
       <p><a href="javascript:history.back()">Go Back</a></p>
