Fix for 403 on .

--- a/example/gitea-disable/files/403.html
+++ b/example/gitea-disable/files/403.html
@@ -7,7 +7,7 @@
   <body>
     <div style="margin: 1em; border-radius: .28571429rem; border-width: 1px; border-style: solid; border-color: rgba(34, 36, 38, 0.15); padding: 1em;">
       <h1>403 Forbidden</h1>
-      <p>Issues, Releases and Wiki are disabled for forked repositories. Please use the source repository for those.</p>
+      <p>Issues, Releases, Wiki and some settings are disabled for forked repositories. Please use the source repository for those.</p>
       <p><a href="javascript:history.back()">Go Back</a></p>
     </div>
   </body>
